removed alignment bug

--- a/style.css
+++ b/style.css
@@ -95,6 +95,7 @@ a {
 .navbar {
   /* min-height: 70px; */
   display: flex;
+  gap: 40px;
   justify-content: space-between;
   align-items: center;
   margin-top: 40px;
@@ -260,7 +261,7 @@ hr {
   display: flex;
   justify-content: flex-end;
   align-items: center;
-  margin-top: 20px;
+  /* margin-top: 20px; */
   margin-left: 48px;
 }
 
@@ -527,8 +528,8 @@ footer {
 }
 
 .switch-blog {
-  display: flex;
-  align-items: center;
+  /* display: flex;
+  align-items: center; */
   /* justify-content: space-between; */
 }
 
@@ -677,8 +678,8 @@ i {
   color: var(--white-text);
   transition: all 0.3s ease-in-out;
   border: none;
-  font-size: 16px;
-  width: 100px;
+  font-size: 20px;
+  width: 90px;
 }
 
 .btn-button:hover {
